installed JavaScript Standard Style

--- a/ApBC/frontend/package.json
+++ b/ApBC/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "standard && node my-tests.js"
   },
   "dependencies": {
     "core-js": "^3.6.4",
@@ -27,6 +28,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "standard": "*"
   }
 }
